# 添加编译的子目录
add_subdirectory(file_resource)
add_subdirectory(host_restore)
add_subdirectory(host_backup)
add_subdirectory(host_livemount)
add_subdirectory(snapshot_provider)
add_subdirectory(host_archive)
add_subdirectory(host_index)
# Add volume backup subsubdirectory
if("${CMAKE_HOST_SYSTEM_NAME}" STREQUAL "Linux")
    add_subdirectory(volume_backup)
    add_subdirectory(volume_index)
    add_subdirectory(volume_livemount)
    add_subdirectory(volume_restore)
endif()